--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   http: ^1.3.0
   gradient_widgets: ^0.6.0 # Для градиентных виджетов
   intl: ^0.18.1 # Для форматирования даты и времени
+  geolocator: ^10.1.0 # Для определения местоположения
+  fl_chart: ^0.66.0 # Для графиков
+  flutter_map: ^6.1.0 # Для карты погоды
+  latlong2: ^0.9.0 # Для работы с координатами
+  air_quality: ^4.1.1 # Для индекса качества воздуха
+  path: ^1.8.3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
