--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   latlong2: ^0.9.0 # Для работы с координатами
   air_quality: ^4.1.1 # Для индекса качества воздуха
   path: ^1.8.3
+  timezone: ^0.9.2 # Для работы с часовыми поясами
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
