--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.2
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -30,20 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.3.0
+  http: ^1.1.0
   gradient_widgets: ^0.6.0 # Для градиентных виджетов
   intl: ^0.18.1 # Для форматирования даты и времени
-  geolocator: ^10.1.0 # Для определения местоположения
-  fl_chart: ^0.66.0 # Для графиков
-  flutter_map: ^6.1.0 # Для карты погоды
+  geolocator: ^10.0.0 # Для определения местоположения
+  fl_chart: ^0.65.0 # Для графиков
+  flutter_map: ^6.0.0 # Для карты погоды
   latlong2: ^0.9.0 # Для работы с координатами
   air_quality: ^4.1.1 # Для индекса качества воздуха
   path: ^1.8.3
   timezone: ^0.9.2 # Для работы с часовыми поясами
+  translator: 1.0.3+1 # Для перевода названий городов
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -54,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -68,9 +70,7 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
